v0.9
- update sell() return with orderid
- update buy() return with orderid
- update sell() param "price" instead of "rate"
- update buy() param "price" instead of "rate"

v0.8
- implemented sell()
- implemented buy()
- update send() with POST

v0.7
- Implemented getBalances()
- Implemented getBalance()
- Implemented secure send()

v0.6
- Better normalizing getOrderbook()

v0.5
- better error handling send()

v0.4
- implemented getOrderbookTicker()

v0.3
- added currency alias

v0.2
- implemented public send()
- implemented getTicker()
- implemented getCurrencyUrl()
- implemented getMarketPair()

v0.1
It's alive